force-app/main/default/objects/Flow_Fault__e/fields/Flow_Element__c.field-meta.xml
<CustomField>
    <fullName>Flow_Element__c</fullName>
    <description>This field stores which Flow element occurs the error</description>
    <label>Flow Element</label>
    <length>255</length>
    <type>Text</type>
</CustomField>