force-app/main/default/objects/Flow_Fault__e/fields/Flow_Guid__c.field-meta.xml
<CustomField>
    <fullName>Flow_Guid__c</fullName>
    <description>Identifier of the flow execution</description>
    <label>Flow Guid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>